# isd_python_course_2025_hw2

./: .gitignore  Readme.md  docker-compose.yml  makefile  pyproject.toml  swagger.json
.github/workflows/: base.yml
src/: db.py
src/app/: auth.py  constraints.py  db.py  main.py  requirements.txt
src/app/classes/: common.py  events.py
src/app/domain/exceptions/: users.py
src/app/exceptions/: bookings.py  events.py  users.py
src/app/infrastructure/adapters/: bookings_adapter.py  events_adapter.py  metrics_adapter.py  users_adapter.py
src/app/infrastructure/db_models/: bookings.py  events.py  users.py
src/app/logic/: bookings.py  events.py  metrics.py  users.py
src/app/models/: bookings.py  events.py  metrics.py  users.py
src/app/presentation/: admins.py  bookings.py  events.py  metrics.py  users.py
src/app/repo/: bookings.py  events.py  users.py
src/app/services/: admins.py  bookings.py  events.py  metrics.py  users.py
src/app/settings/: auth.py  user.py
tests/: test_example.py
tests/adapters/: test_bookings.py  test_events.py  test_metrics.py  test_users.py
tests/logic/: test_bookings.py  test_events.py  test_metrics.py  test_users.py
tests/presentation/: test_admins.py  test_bookings.py  test_events.py  test_metrics.py  test_users.py
tests/services/: test_admins.py  test_bookings.py  test_events.py  test_metrics.py  test_users.py
